--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>CSS Positioning</h1>
     <ul>
         <li><a href="./fixed">Fixed</a></li>
+        <li><a href="./absolute">Absolute</a></li>
     </ul>
 </body>
 
